--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -15,7 +15,10 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="FSharpML.fsx" />
-    <Compile Include="Library.fs" />
+    <Compile Include="Data.fs" />
+    <Compile Include="Transformer.fs" />
+    <Compile Include="TransformerModel.fs" />
+    <Compile Include="EstimatorModel.fs" />
     <None Include="testing.fsx" />
     <None Include="Scripts\Script.fsx" />
     <None Include="paket.references" />
