add examples to port

--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -19,7 +19,9 @@
     <Compile Include="Transformer.fs" />
     <Compile Include="TransformerModel.fs" />
     <Compile Include="EstimatorModel.fs" />
-    <None Include="testing.fsx" />
+    <None Include="Sentiment analysis.fsx" />
+    <None Include="SpamDetection.fsx" />
+    <None Include="IrisClassification.fsx" />
     <None Include="Scripts\Script.fsx" />
     <None Include="paket.references" />
     <None Include="paket.template" />
