--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>FSharpML</RootNamespace>
@@ -14,13 +14,11 @@
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Remove="Scripts\**" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Data.fs" />
-    <Compile Include="Transformer.fs" />
     <Compile Include="TransformerModel.fs" />
     <Compile Include="EstimatorModel.fs" />
+    <Compile Include="Evaluation.fs" />
+    <Compile Include="Extensions.fs" />
     <None Include="FSharpML.fsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
