--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -22,6 +22,8 @@
     <Compile Include="Evaluation.fs" />
     <Compile Include="FeatureImportance.fs" />
     <Compile Include="Extensions.fs" />
+    <Compile Include="PredictionModel.fs" />
+    <Compile Include="Prediction.fs" />
     <None Include="FSharpML.fsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
