--- a/src/FSharpML/paket.template
+++ b/src/FSharpML/paket.template
@@ -24,6 +24,7 @@ summary
     Library for the FSharp friendly usage of the ML.NET project
 description
     Library for the FSharp friendly usage of the ML.NET project
-
+dependencies
+    Microsoft.ML = 0.10.0
 files
 	../../bin/FSharpML ==> lib
