Add data and dataview functionality

--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Data.fs" />
+    <Compile Include="DataModel.fs" />
     <Compile Include="Transformer.fs" />
     <Compile Include="Estimator.fs" />
     <Compile Include="TransformerModel.fs" />
