Introducing namespaces: EstimatorModel and TransformerModel

--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -18,14 +18,14 @@
     <Compile Include="DataModel.fs" />
     <Compile Include="Transformer.fs" />
     <Compile Include="TransformerModel.fs" />
-    <Compile Include="Transforms.fs" />
     <Compile Include="Estimator.fs" />
     <Compile Include="EstimatorModel.fs" />
+    <Compile Include="Transforms.fs" />
     <Compile Include="Evaluation.fs" />
     <Compile Include="Prediction.fs" />
     <Compile Include="PredictionModel.fs" />
     <Compile Include="FeatureImportance.fs" />
-    <Compile Include="Extensions.fs" />
+    <Compile Include="CrossValidation.fs" />
     <None Include="FSharpML.fsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
