--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -7,8 +7,19 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Data.fs" />
+    <Compile Include="DataModel.fs" />
+    <Compile Include="Transformer.fs" />
+    <Compile Include="TransformerModel.fs" />
+    <Compile Include="Estimator.fs" />
+    <Compile Include="EstimatorModel.fs" />
+    <Compile Include="Transforms.fs" />
+    <Compile Include="Evaluation.fs" />
+    <Compile Include="DefaultPredictionResults.fs" />
+    <Compile Include="FeatureImportance.fs" />
+    <Compile Include="CrossValidation.fs" />
+    <None Include="FSharpML.fsx" />
     <None Include="paket.references" />
-    <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
