Update loading script and Ml.Net version 1.5.0-preview

--- a/src/FSharpML/FSharpML.fsproj
+++ b/src/FSharpML/FSharpML.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -18,7 +18,9 @@
     <Compile Include="DefaultPredictionResults.fs" />
     <Compile Include="FeatureImportance.fs" />
     <Compile Include="CrossValidation.fs" />
-    <None Include="FSharpML.fsx" />
+    <None Include="FSharpML.fsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="paket.references" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
